--- a/src/main/webapp/app/entities/core/tag/tag-update.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag-update.component.html
@@ -5,6 +5,7 @@
                 Create or edit a Tag
             </h2>
             <div>
+                <jhi-alert-error></jhi-alert-error>
                 <div class="form-group">
                     <mat-form-field class="full-width">
                         <input type="text" name="name" id="field_name"
@@ -18,12 +19,12 @@
                 </div>
                 <div class="form-group">
                     <mat-form-field class="full-width">
-                            <textarea matInput type="text"
-                                      id="field_description"
-                                      formControlName="description"
-                                      placeholder="Description">
+                        <textarea matInput type="text"
+                                  id="field_description"
+                                  formControlName="description"
+                                  placeholder="Description">
 
-                            </textarea>
+                        </textarea>
                     </mat-form-field>
                 </div>
             </div>
