--- a/src/main/webapp/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/main/webapp/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -5,9 +5,9 @@
     <div class="dialogue-body p-4">
         <p>{{data['message']}}</p>
         <div class="d-flex justify-content-end">
-            <button mat-raised-button class="mr-3"
+            <button mat-raised-button color="warn" class="mr-3"
                     (click)="accept()">Yes</button>
-            <button mat-raised-button color="warn"
+            <button mat-raised-button
                     (click)="cancel()">No</button>
         </div>
     </div>
