--- a/src/main/webapp/app/entities/core/category/category-update.component.html
+++ b/src/main/webapp/app/entities/core/category/category-update.component.html
@@ -49,57 +49,10 @@
                         <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.parent" for="field_parent">Parent</label>-->
                         <mat-form-field class="w-100">
                             <input matInput placeholder="{{'gatewayApp.coreCategory.parent' | translate}}"
-                                type="text" class="form-control" name="parent" id="field_parent"
+                                type="text" name="parent" id="field_parent"
                                    [(ngModel)]="category.parent" />
                         </mat-form-field>
                     </div>
-                    <!-- <div class="form-group">
-                         <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.clientId" for="field_clientId">Client Id</label>
-                         <input type="text" class="form-control" name="clientId" id="field_clientId"
-                             [(ngModel)]="category.clientId" required/>
-                         <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
-                             <small class="form-text text-danger"
-                             [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
-                             This field is required.
-                             </small>
-                         </div>
-                     </div>-->
-                    <!--<div class="form-group">
-                        <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.createdDate" for="field_createdDate">Created Date</label>
-                        <div class="d-flex">
-                            <input id="field_createdDate" type="datetime-local" class="form-control" name="createdDate" [(ngModel)]="createdDate"
-                            required/>
-                        </div>
-                        <div [hidden]="!(editForm.controls.createdDate?.dirty && editForm.controls.createdDate?.invalid)">
-                            <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.createdDate?.errors?.required" jhiTranslate="entity.validation.required">
-                            This field is required.
-                            </small>
-                            <small class="form-text text-danger"
-                                [hidden]="!editForm.controls.createdDate?.errors?.ZonedDateTimelocal" jhiTranslate="entity.validation.ZonedDateTimelocal">
-                                This field should be a date and time.
-                            </small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.lastUpdatedDate" for="field_lastUpdatedDate">Last Updated Date</label>
-                        <div class="d-flex">
-                            <input id="field_lastUpdatedDate" type="datetime-local" class="form-control" name="lastUpdatedDate" [(ngModel)]="lastUpdatedDate"
-                            required/>
-                        </div>
-                        <div [hidden]="!(editForm.controls.lastUpdatedDate?.dirty && editForm.controls.lastUpdatedDate?.invalid)">
-                            <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.lastUpdatedDate?.errors?.required" jhiTranslate="entity.validation.required">
-                            This field is required.
-                            </small>
-                            <small class="form-text text-danger"
-                                [hidden]="!editForm.controls.lastUpdatedDate?.errors?.ZonedDateTimelocal" jhiTranslate="entity.validation.ZonedDateTimelocal">
-                                This field should be a date and time.
-                            </small>
-                        </div>
-                    </div>
-
-                </div>-->
                     <div class="d-flex justify-content-end">
                         <button mat-raised-button color="warn" class="mr-3"
                             type="button" id="cancel-save"  (click)="previousState()">
