--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -33,14 +33,14 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field class="full-width margin-t-20">
-                    <input matInput
-                           formControlName="subTitle"
-                           placeholder="Subtitle of the Post">
-                    <mat-error>
-                        Sub Title is <strong>required</strong>
-                    </mat-error>
-                </mat-form-field>
+                <!--<mat-form-field class="full-width margin-t-20">-->
+                    <!--<input matInput-->
+                           <!--formControlName="subTitle"-->
+                           <!--placeholder="Subtitle of the Post">-->
+                    <!--<mat-error>-->
+                        <!--Sub Title is <strong>required</strong>-->
+                    <!--</mat-error>-->
+                <!--</mat-form-field>-->
 
                 <mat-form-field class="full-width margin-t-30">
                     <textarea matInput
