--- a/src/main/webapp/app/entities/core/status/status-detail.component.html
+++ b/src/main/webapp/app/entities/core/status/status-detail.component.html
@@ -1,47 +1,61 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="status">
-            <h2><span jhiTranslate="gatewayApp.coreStatus.detail.title">Status</span> {{status.id}}</h2>
-            <hr>
-            <jhi-alert-error></jhi-alert-error>
-            <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="gatewayApp.coreStatus.name">Name</span></dt>
-                <dd>
-                    <span>{{status.name}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreStatus.clientId">Client Id</span></dt>
-                <dd>
-                    <span>{{status.clientId}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreStatus.isDefault">Is Default</span></dt>
-                <dd>
-                    <span>{{status.isDefault}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreStatus.slug">Slug</span></dt>
-                <dd>
-                    <span>{{status.slug}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreStatus.createdDate">Created Date</span></dt>
-                <dd>
-                    <span>{{status.createdDate}}</span>
-                </dd>
-                <dt><span jhiTranslate="gatewayApp.coreStatus.lastUpdatedDate">Last Updated Date</span></dt>
-                <dd>
-                    <span>{{status.lastUpdatedDate}}</span>
-                </dd>
-            </dl>
+<div class="detail-view-page">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div *ngIf="status">
+                <h2><span jhiTranslate="gatewayApp.coreStatus.detail.title">Status</span> {{status.id}}</h2>
+                <jhi-alert-error></jhi-alert-error>
+                <div class="table-wrap">
+                    <table class="row-md jh-entity-details">
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.name">Name</span></td>
+                            <td>
+                                <span>{{status.name}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.clientId">Client Id</span></td>
+                            <td>
+                                <span>{{status.clientId}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.isDefault">Is Default</span></td>
+                            <td>
+                                <span>{{status.isDefault}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.slug">Slug</span></td>
+                            <td>
+                                <span>{{status.slug}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.createdDate">Created Date</span></td>
+                            <td>
+                                <span>{{status.createdDate}}</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><span jhiTranslate="gatewayApp.coreStatus.lastUpdatedDate">Last Updated Date</span></td>
+                            <td>
+                                <span>{{status.lastUpdatedDate}}</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" mat-raised-button class="mr-2"
+                            (click)="previousState()">
+                        <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
+                    </button>
 
-            <button type="submit"
-                    (click)="previousState()"
-                    class="btn btn-info">
-                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
-            </button>
-
-            <button type="button"
-                    [routerLink]="['/status', status.id, 'edit']"
-                    class="btn btn-primary">
-                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
-            </button>
+                    <button type="button" mat-raised-button color="primary"
+                            [routerLink]="['/status', status.id, 'edit']">
+                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
