--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -21,85 +21,85 @@
 				<ul class="nav-dropdown-items">
 					<li>
 						<a routerLink="post" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+							<mat-icon>assignment</mat-icon>
 							<span jhiTranslate="global.menu.entities.corePost">Post</span>
 						</a>
 					</li>
 					<li>
 						<a routerLink="category" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+							<mat-icon>category</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreCategory">Category</span>
 						</a>
 					</li>
 					<li>
 						<a routerLink="format" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+							<mat-icon>format_shapes</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreFormat">Format</span>
 						</a>
 					</li>
 					<li>
 						<a routerLink="organization" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+							<mat-icon>nature_people</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreOrganization">Organization</span>
 						</a>
 					</li>
 					<li>
 						<a routerLink="status" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+							<mat-icon>linear_scale</mat-icon>
 							<span jhiTranslate="global.menu.entities.coreStatus">Status</span>
 						</a>
 					</li>
                     <li>
                         <a routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>style</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreTag">Tag</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="media" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>perm_media</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreMedia">Media</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="dega-user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>people</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreDegaUser">Dega User</span>
                         </a>
                     </li>
                     <li>
                         <a routerLinkActive="active" routerLink="role" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>verified_user</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreRole">Role</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="rating" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>star_rate</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="claim" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>pageview</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckClaim">Claim</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>record_voice_over</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="factcheck" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" >
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>beenhere</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckFactcheck">Factcheck</span>
                         </a>
                     </li>
                     <li>
                         <a routerLink="role-mapping" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <mat-icon>compare_arrows</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreRoleMapping">Role Mapping</span>
                         </a>
                     </li>
