--- a/src/main/webapp/app/layouts/sidebar/sidebar.scss
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.scss
@@ -42,11 +42,15 @@
                 overflow: hidden;
                 a {
                     position: relative;
-                    display: block;
+                    display: flex;
+                    align-items: center;
                     color: #fff;
                     background: #3a4248;
                     padding: 0.75rem 1rem;
                     font-weight: 100;
+                    mat-icon {
+                        margin-right: 15px;
+                    }
                     fa-icon {
                         margin-right: 16px;
                     }
@@ -112,12 +116,11 @@
                 border-width: 2px 2px 0 0;
                 transform: rotate(225deg);
                 top: 7px;
-                right: 10px;
                 transition: 0.3s;
             }
             &.sticky:after {
                 transform: rotate(45deg);
-                right: 4px;
+                right: 12px;
             }
         }
     }
